src/Styles/settings.css
/* ... */
.note-toolbar-tbar-name-container {
    flex-direction: row;
    flex-wrap: Wrap;
    display: flex;
    gap: 2px var(--size-4-2);
    overflow: hidden;
}

.modal.note-toolbar-setting-modal-container .modal-content {

    & .note-toolbar-setting-item-controls {
        display: flex;
        gap: var(--size-4-2);
        & .setting-item {
            border-bottom: none;
            padding: 0;
            & .setting-item-control {
                .is-mobile & {
                    margin-top: 0;
                }
            }
            & .setting-item-info {
                display: none;
            }
        }
        & .note-toolbar-setting-item-visibility-and-controls {
            border: none;
        }
        &.note-toolbar-item-visibility-indicator {
            padding-inline: var(--size-4-2);
            & svg {
            color: var(--interactive-accent);
            }
        }
    }

    & .setting-items.note-toolbar-setting-styles-group {
        & .note-toolbar-setting-item-style .setting-item:not(.setting-item-heading)::before {
            border-top: none;
        }
    }

    & .note-toolbar-setting-item-styles {
        & > .setting-item-info {
            align-self: flex-start;
        }
        & .note-toolbar-setting-item-style {
            display: flex;
            flex-wrap: wrap;
            align-items: center;
            justify-content: end;
            gap: 0.25em;
            width: 100%;
            & .setting-item {
                align-items: center;
                /* box-shadow: blue 0px 0px 0px 1px !important; */
                border-top: none;
                border: dashed 1px var(--pill-color-remove);
                border-radius: var(--pill-radius);
                gap: 0;
                padding-top: 0;
                padding-bottom: 0;
                padding-inline: 0.75em 0.25em;
                flex-wrap: nowrap;
                height: var(--input-height);
                .is-mobile & {
                    flex-direction: row;
                }
                &:first-child {
                    border: dashed 1px var(--pill-color-remove);
                }
                &:last-child {
                    border: none;
                    padding: 0em;
                    flex: 0 0 100%;
                    &::before {
                        border: none;
                    }
                }
                & .setting-item-info {
                    align-self: unset;
                    margin-inline-end: 0.25em;
                    color: var(--pill-color);
                    & .setting-item-name {
                        font-size: var(--metadata-input-font-size);
                    }
                }
                & .setting-item-control {
                    --icon-size: var(--icon-xs);
                    --icon-stroke: var(--icon-xs-stroke-width);
                    .is-mobile & {
                        margin-top: 0;
                    }
                    .is-phone & {
                        width: inherit;
                    }
                    & .extra-setting-button:active,
                    & .extra-setting-button:hover {
                        border-radius: var(--pill-radius);
                    }
                    & select.dropdown, 
                    & select.dropdown:active,
                    & select.dropdown:focus {
                        border-radius: var(--pill-radius);
                        font-size: var(--metadata-input-font-size);
                    }
                }
            }
        }
    }

    & .note-toolbar-setting-item-visibility {
        display: flex;
        & button {
            font-size: var(--font-ui-smaller);
        }
    }

    & .note-toolbar-setting-item-visibility-and-controls {
        border-top: none;
        display: flex;
        padding-top: 0.75em;
        justify-content: space-between;
        & .setting-item {
            padding-bottom: 0;
            & .setting-item-info {
                display: none;
            }
            .is-mobile & {
                padding-top: 0;
            }
            & .setting-item-control {
                .is-mobile & {
                    margin-top: 0;
                }
                & button {
                    background: none;
                    box-shadow: none;
                    color: var(--icon-color);
                    gap: var(--size-4-2);
                    padding: var(--size-4-2);
                    &:hover {
                        opacity: var(--icon-opacity-hover);
                        color: var(--icon-color-hover);
                        background-color: var(--background-modifier-hover);
                    }
                    &:focus-visible {
                        border-radius: var(--input-radius);
                        box-shadow: 0 0 0 2px var(--background-modifier-border-focus);
                    }
                    & span:last-child {
                        font-size: var(--font-smaller);
                    }
                }
            }
        }
        &[data-item-type="break"],
        &[data-item-type="separator"],
        &[data-item-type="spreader"]  {
            padding-top: 0;
            & span {
                align-content: center;
                color: var(--text-muted);
                margin-left: 0.25em;
            }
        }
    }

    & .note-toolbar-setting-no-border {
        border-top: none;
    }

}

.mod-cta .note-toolbar-setting-text-with-icon {
    & svg {
        color: var(--text-on-accent);
    }
}

.note-toolbar-setting-text-with-icon {
    display: inline-flex;
    gap: 0 0.5em;
    align-items: center;
    & svg {
        color: var(--text-color);
        vertical-align: middle;
    }
}
/* ... */

